# ClashBox

entry/: patch.json
xb_components/: BuildProfile.ets  Index.ets  build-profile.json5  oh-package.json5
xb_components/src/main/: module.json5
xb_components/src/main/cpp/: CMakeLists.txt  init.cpp
xb_components/src/main/cpp/types/libxb_compontents/: Index.d.ts  oh-package.json5
xb_components/src/main/cpp/utils/: napi_utils.cpp  napi_utils.h
xb_components/src/main/ets/components/: Common.ets  Constants.ets  MainPage.ets  Xb_Account.ets  Xb_Button.ets  Xb_CustomDialog.ets  Xb_Dialog.ets  Xb_GeneralListItem.ets  Xb_IconLogo.ets  Xb_Menu.ets  Xb_Pay.ets  Xb_PriUserComWeb.ets  Xb_RowCustomDialog.ets  Xb_SettingItem.ets  Xb_SettingsCommon.ets  Xb_SideBar.ets  Xb_SwitchButton.ets  Xb_TabComponent.ets  Xb_TopTitleBar.ets  Xb_UpdateLog.ets  Xb_Vip.ets  Xb_WindowDecor.ets
xb_components/src/main/ets/controllers/: ControlButton.ets  ControlButtonViewModel.ets  ControlDirection.ets  ControlDirectionViewModel.ets  Controller.ets  ControllerEventHandler.ets  ControllerViewModel.ets  CursorView.ets  GameLayout.ets  InputView.ets  MenuButton.ets  TouchPadInput.ets  TouchPadView.ets
xb_components/src/main/ets/entity/: Common.ets  GlobalContext.ets  PromptActionClass.ts  ScreenInfo.ets  XbGlobal.ets
xb_components/src/main/ets/model/: SettingsItem.ets  di.ets
xb_components/src/main/ets/settings/: ContributorListOp.ets  SettingsCommonOp.ets
xb_components/src/main/ets/utils/: Animation.ets  AppContinue.ets  AvoidManager.ts  (+35 more)
xb_components/src/ohosTest/: module.json5
(+23 files in other folders)
